Add program args to examples